conffig-map-pod.yml
#using cconfig maps
apiVersion: v1
kind: Pod
metadata:
  name: webapp-color
  labels:
    name: webapp-color
spec:
  containers:
    - name: webapp-color
      image: kodekloud/webapp-color
      resources:
        requests: 
          memory: "150Mi"
          cpu: "1"
        limits:
          memory: "150Mi"
          cpu: "1"
