deploy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-2
  label: 
    env: test
spec:
  containers:
    - name: nginx-2
      image: nginx
