deployment-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiserver
  labels:
    name: apiserver
    type: application
spec:
  replicas: 3
  selector:
    matchLabels: 
      type: application
  template:
    metadata:
      name: apiserver
      labels:
        app: apiserver
        type: application
    spec:
      containers:
        - name: apiserver
          image: nginx
