pod-definition.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp-pod
  labels:
    app: mypod
spec: 
  containers: 
    - name: myapp-nginx
      image: nginx
      imagePullPolicy: Always
      resources: 
        requests:
          memory: "256Mi"
          cpu: "250m"
        limits:
          memory: "256Mi"
          cpu: "250m"
