pod-stress.yml
apiVersion: v1
kind: Pod
metadata:
  name: elephant
  labels:
    name: elephant
spec:
  containers:
    - name: mem-stress
      image: polinux/stress
      command: ["stress"]
      args: ["--vm", "1", "--vm-bytes", "120M", "--vm-hang", "1"]
      resources:
        requests:
          memory: "150Mi"
        limits:
          memory: "150Mi"
          cpu: "1"
