pod-with-secrets.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-pod
  labels:
    name: webapp-pod
spec:
  containers:
    - name: webapp-pod
      image: kodekloud/simple-webapp-mysql
      resources:
        requests:
          memory: "256Mi"
          cpu: 2
        limits:
          memory: "256Mi"
          cpu: 2
