prod-definition.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: nginx
  labels:
    app: nginx
    type: testing
spec:
  containers:
    - name: nginx-xontainer
      image: nginx
