readiness-probe.yml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-2
  labels:
    name: simple-webapp-2
spec:
  containers:
    - name: simple-webapp-2
      image: kodekloud/webapp-delayed-start
      ports:
        - containerPort: 8080
          protocol: TCP
      readinessProbe:
        httpGet:
          path: /ready
          port: 8080
      resources:
        requests:
          memory: "256Mi"
          cpu: "1"
        limits:
          memory: "256Mi"
          cpu: "1"
      livenessProbe:
        httpGet:
          port: "8080"
          path: /ready
        initialDelaySeconds: 50
        periodSeconds: 5
