repcon-definition.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: replica
  labels: 
    app: replica
    type: test
spec: 
  template: 
    metadata: 
      name: replica
      labels: 
        app: replica
        type: test
      spec: 
        containers: 
          - name: nginx-controller
            image: nginx
  replicas: 3
