volume-mounts.yml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
spec:
  containers:
    - name: webapp
      image: kodekloud/event-simulator
      volumeMounts:
        - name: log-volume
          mountPath: /log
  volumes:
    - name: log-volume
      hostPath:
        path: /var/log/webapp
        type: Directory
