services.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30080 #30000 - 32767
  selector:
    name: myapp-deployment
    type: application
